<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>


    <!-- Format strings -->
    <string name="toast_format_string">%1$s!</string>
    <string name="date_format_string">%1$-7s</string>
    <string name="start_time_format_string">%1$-7s</string>
    <string name="end_time_format_string">%1$-7s</string>
    <string name="header_format_string">>%1$-10s %2$10s</string>

    <!-- Display strings -->
    <string name="empty_view_text">No shifts to display.</string>
    <string name="refresh">Refresh</string>
    <string name="widget_title">Upcoming Shifts </string>
    <string name="title_activity_main">Enter your Smartshift credentials</string>
    <string name="date_column">Date</string>
    <string name="start_column">Start</string>
    <string name="end_column">End</string>

</resources>
