<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:layout_marginBottom="@dimen/widget_margin_bottom"
    android:layout_marginLeft="@dimen/widget_margin_left"
    android:layout_marginRight="@dimen/widget_margin_right">


    <!-- Title and buttons -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingRight="15dp"
        android:background="@color/colorTitle"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/widget_left_padding">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/widget_title"
            android:textColor="#232323"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <ImageButton
                android:id="@+id/settings"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/settings_button"/>
            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/refresh_button" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- Columns -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:paddingLeft="46dp"
        android:paddingBottom="3dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date_column">
        </TextView>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/start_column">
        </TextView>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/end_column">
        </TextView>
    </LinearLayout>

    <!-- List -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="#80F8F8F8">
        <ListView
            android:id="@+id/shift_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/empty_view_text"
            android:textSize="20sp" />
    </FrameLayout>



</LinearLayout>
